cmake_minimum_required(VERSION 2.6)

project(algo C CXX)

set(CXX_FLAGS
 -g
 # -DVALGRIND
 -DCHECK_PTHREAD_RETURN_VALUE
 -D_FILE_OFFSET_BITS=64
 -Wall
 -Wextra
 -Werror
 -Wconversion
 -Wno-unused-parameter
 -Wold-style-cast
 -Woverloaded-virtual
 -Wpointer-arith
 -Wshadow
 -Wwrite-strings
 -march=native
 # -MMD
 -std=c++11
 -rdynamic
 -pthread
 )

string(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")

set(CMAKE_CXX_FLAGS_DEBUG "-O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/dynamic)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/log)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/maxpriority)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/pattern)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/skiplist)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/sort)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SOURCE_FILES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/dynamic SOURCE_FILES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/log SOURCE_FILES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/maxpriority SOURCE_FILES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/pattern SOURCE_FILES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/skiplist SOURCE_FILES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/sort SOURCE_FILES)

ADD_EXECUTABLE(algo ${SOURCE_FILES})
